--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ format:
     # theme: cosmo
     # theme: sandstone
     theme: yeti
-    css: styles.css
+    # css: styles.css
     toc: true
     df-print: kable
 
