--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,15 +3,15 @@ project:
 
 format:
   html:
-    # theme: cosmo
-    # theme: sandstone
     theme: yeti
-    # css: styles.css
     toc: true
     df-print: kable
 
 website:
   title: "Transitional Justice Research Collaborative"
+  search:
+    location: navbar
+    type: overlay
   navbar:
     left:
       - href: index.qmd
@@ -32,3 +32,10 @@ website:
         text: "People"
       - href: links.qmd
         text: "Links"
+  body-footer: _footer.qmd
+  page-footer:
+    right: |
+      This site was recreated by [Oskar Timo Thoms](https://oskarthoms.net) on behalf of TJET/TJRC and built with [Quarto](https://quarto.org/) and the [reactable](https://glin.github.io/reactable/) package.
+    border: true
+    background: light
+    foreground: black
